force-app/main/default/objects/Term_Extension__c/Term_Extension__c.object-meta.xml
<CustomObject>
    <label>Term Extension</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Extension ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>