force-app/main/default/objects/Term_Extension__c/fields/Account_f__c.field-meta.xml
<CustomField>
    <fullName>Account_f__c</fullName>
    <formula>Contract__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>