force-app/main/default/objects/Term_Extension__c/fields/Base_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Base_Line_Item_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is the purpose of this field</description>
    <inlineHelpText>This field should be DELETED.</inlineHelpText>
    <label>X_Base Line Item ID</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Term Extensions</relationshipLabel>
    <relationshipName>Item_ID</relationshipName>
    <type>Lookup</type>
</CustomField>