force-app/main/default/objects/Term_Extension__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Number</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Term Extensions</relationshipLabel>
    <relationshipName>Term_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>