force-app/main/default/objects/Term_Extension__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Term Extensions</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>