force-app/main/default/objects/Term_Extension__c/fields/Contract_Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Type__c</fullName>
    <formula>TEXT(Contract__r.Renewal_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Renewal Type</label>
    <type>Text</type>
</CustomField>