force-app/main/default/objects/Term_Extension__c/fields/Current_Outstanding_Business_Approval__c.field-meta.xml
<CustomField>
    <fullName>Current_Outstanding_Business_Approval__c</fullName>
    <formula>IF( AND(Term__c &gt;12, TEXT(Status__c) = &#39;Submitted for Approval&#39;)
    ,  IF(TEXT(Renewal_Business_Approval_Status__c)= &#39;Submitted&#39;, &#39;Manager Approval&#39;              
      ,  IF(TEXT(Renewal_Business_Approval_Status__c) = &#39;Manager Approved&#39;
                    ,IF( Monthly_Volume__c &gt; 10000, &#39;Director Approval&#39;, &#39;VP Approval&#39;) 
             ,  IF(TEXT(Renewal_Business_Approval_Status__c) = &#39;Director Approved&#39;, &#39;VP Approval&#39;
             ,  IF(TEXT(Renewal_Business_Approval_Status__c) = &#39;VP Approved&#39;, &#39;CEO Approval&#39;, null)))),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Outstanding Business Approval</label>
    <type>Text</type>
</CustomField>