force-app/main/default/objects/Term_Extension__c/fields/Interface_Status__c.field-meta.xml
<CustomField>
    <fullName>Interface_Status__c</fullName>
    <label>Interface Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>IN SYNC</fullName>
            </value>
            <value>
                <fullName>OUT OF SYNC</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>