force-app/main/default/objects/Term_Extension__c/fields/Last_Price_Refresh2__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Refresh2__c</fullName>
    <formula>IF(ISNULL(Last_Price_Refresh__c),&#39;&#39;, 
TEXT(MONTH(DATEVALUE(Last_Price_Refresh__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(Last_Price_Refresh__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Last_Price_Refresh__c))) &amp; &quot; &quot; &amp; IF( OR( VALUE( MID( TEXT( Last_Price_Refresh__c), 12, 2 ) ) = 0, VALUE( MID( TEXT( Last_Price_Refresh__c), 12, 2 ) ) = 12 ), &quot;12&quot;, TEXT( VALUE( MID( TEXT( Last_Price_Refresh__c), 12, 2 ) ) - IF( VALUE( MID( TEXT( Last_Price_Refresh__c), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp; MID( TEXT( Last_Price_Refresh__c), 15, 2 ) &amp; &quot; &quot; &amp; IF( VALUE( MID( TEXT( Last_Price_Refresh__c), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Price Refresh</label>
    <type>Text</type>
</CustomField>