force-app/main/default/objects/Term_Extension__c/fields/Last_Price_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Refresh__c</fullName>
    <label>Last Price Refresh</label>
    <type>DateTime</type>
</CustomField>