force-app/main/default/objects/Term_Extension__c/fields/Last_Price_Refresh_Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Refresh_Template_Version__c</fullName>
    <label>Last Price Refresh Template Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>