force-app/main/default/objects/Term_Extension__c/fields/Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume__c</fullName>
    <formula>Volume__c / Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>