force-app/main/default/objects/Term_Extension__c/fields/Needed_for_Contract_Rolling__c.field-meta.xml
<CustomField>
    <fullName>Needed_for_Contract_Rolling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this term extension should not be deleted as part of another process.</description>
    <label>Needed for Contract Rolling</label>
    <type>Checkbox</type>
</CustomField>