force-app/main/default/objects/Term_Extension__c/fields/Prior_Period_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period_Total_Margin__c</fullName>
    <label>Prior Period Total Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>