force-app/main/default/objects/Term_Extension__c/fields/Prior_Period_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period_Unit_Margin__c</fullName>
    <formula>Prior_Period_Total_Margin__c / Prior_Period_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Period Unit Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>