force-app/main/default/objects/Term_Extension__c/fields/Prior_Period_Volume__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period_Volume__c</fullName>
    <label>Prior Period Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>