force-app/main/default/objects/Term_Extension__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Term Extensions</relationshipLabel>
    <relationshipName>Term_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>