force-app/main/default/objects/Term_Extension__c/fields/Renewal_Business_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Business_Approval_Status__c</fullName>
    <description>Used for business approvals of term extensions as part of the contract renewal process.</description>
    <label>Renewal Business Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>Director Approved</fullName>
            </value>
            <value>
                <fullName>VP Approved</fullName>
            </value>
            <value>
                <fullName>CEO Approved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>