force-app/main/default/objects/Term_Extension__c/fields/Term_Extension_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Term_Extension_Total_Margin__c</fullName>
    <label>Term Extension Total Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>