force-app/main/default/objects/Term_Extension__c/fields/Term_Extension_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Term_Extension_Unit_Margin__c</fullName>
    <formula>Term_Extension_Total_Margin__c / Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Extension Unit Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>