force-app/main/default/objects/Term_Extension__c/fields/Total_Margin_Change__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Change__c</fullName>
    <formula>Term_Extension_Total_Margin__c - Prior_Period_Total_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin Change</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>