force-app/main/default/objects/Term_Extension__c/fields/Unit_Margin_Change__c.field-meta.xml
<CustomField>
    <fullName>Unit_Margin_Change__c</fullName>
    <formula>Term_Extension_Unit_Margin__c - Prior_Period_Unit_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Margin Change</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>