force-app/main/default/objects/Term_Extension__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Term__c</columns>
    <columns>Contract__c</columns>
    <columns>Contract_Renewal_Type__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>