force-app/main/default/objects/Term_Extension__c/listViews/Pricing_Q219_Term_Extension.listView-meta.xml
<ListView>
    <fullName>Pricing_Q219_Term_Extension</fullName>
    <filterScope>Queue</filterScope>
    <label>Pricing Q219</label>
    <queue>Pricing_Q219</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>